subprojects/swen430/src/test/resources/tests/valid/ListAssign_Valid_11.while
void main() {
    [[int]] l = [[0, 1]];
    l[0][1] = 2;
    print l;
}
