subprojects/swen430/src/test/resources/tests/invalid/Deadcode_Invalid_3.while
int foo(int x) {
    switch (x) {
        case 1:
        case 2:
        default:
            return x;
    }

    return 1;
}
